Feat/add cron predict time (#72)
* feat: add backend api to generate schedule time
